[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Burak Sekili <buraksekili@gmail.com>"]
description = "A key-value store"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
env_logger = "0.11.5"
failure = "0.1.5"
log = "0.4.22"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
